[package]
name = "Turkium-merkle"
description = "Turkium merkle tree library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
Turkium-hashes.workspace = true

[lints]
workspace = true
