[package]
name = "turkium-merkle"
description = "turkium merkle tree library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
turkium-hashes.workspace = true

[lints]
workspace = true
