[package]
name = "turkium-index-processor"
description = "turkium index processor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
turkium-consensus-core.workspace = true
turkium-consensus-notify.workspace = true
turkium-consensusmanager.workspace = true
turkium-core.workspace = true
turkium-database.workspace = true
turkium-hashes.workspace = true
turkium-index-core.workspace = true
turkium-notify.workspace = true
turkium-utils.workspace = true
turkium-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}
triggered.workspace = true

[dev-dependencies]
turkium-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}

[lints]
workspace = true