[package]
name = "Turkium-utxoindex"
description = "Turkium UTXO index"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
Turkium-consensus-core.workspace = true
Turkium-consensusmanager.workspace = true
Turkium-core.workspace = true
Turkium-database.workspace = true
Turkium-hashes.workspace = true
Turkium-index-core.workspace = true
Turkium-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
Turkium-consensus.workspace = true
rand = { workspace = true, features = ["small_rng"] }

[lints]
workspace = true
