[package]
name = "turkium-utxoindex"
description = "turkium UTXO index"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
turkium-consensus-core.workspace = true
turkium-consensusmanager.workspace = true
turkium-core.workspace = true
turkium-database.workspace = true
turkium-hashes.workspace = true
turkium-index-core.workspace = true
turkium-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
turkium-consensus.workspace = true
rand = { workspace = true, features = ["small_rng"] }

[lints]
workspace = true
