[package]
name = "turkium-p2p-flows"
description = "turkium p2p flows"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
turkium-core.workspace = true
turkium-consensus-core.workspace = true
turkium-consensus-notify.workspace = true
turkium-p2p-lib.workspace = true
turkium-p2p-mining.workspace = true
turkium-utils.workspace = true
turkium-utils-tower.workspace = true
turkium-hashes.workspace = true
turkium-muhash.workspace = true
turkium-connectionmanager.workspace = true
turkium-addressmanager.workspace = true
turkium-consensusmanager.workspace = true
turkium-mining.workspace = true
turkium-notify.workspace = true

async-trait.workspace = true
futures = { workspace = true, features = ["alloc"] }
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
chrono.workspace = true

[lints]
workspace = true
