[package]
name = "Turkium-p2p-mining"
description = "Turkium p2p mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
Turkium-core.workspace = true
Turkium-consensus-core.workspace = true
Turkium-consensusmanager.workspace = true
Turkium-mining-errors.workspace = true
Turkium-hashes.workspace = true
Turkium-math.workspace = true
Turkium-p2p-lib.workspace = true
Turkium-utils.workspace = true
Turkium-utils-tower.workspace = true
log.workspace = true
tokio.workspace = true

[lints]
workspace = true
