[package]
name = "turkium-p2p-mining"
description = "turkium p2p mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
turkium-core.workspace = true
turkium-consensus-core.workspace = true
turkium-consensusmanager.workspace = true
turkium-mining-errors.workspace = true
turkium-hashes.workspace = true
turkium-math.workspace = true
turkium-p2p-lib.workspace = true
turkium-utils.workspace = true
turkium-utils-tower.workspace = true
log.workspace = true
tokio.workspace = true

[lints]
workspace = true
