[package]
name = "Turkium-rpc-core"
description = "Turkium RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "Turkium-consensus-client/wasm32-sdk",
    "Turkium-consensus-wasm/wasm32-sdk"
]

[dependencies]
Turkium-addresses.workspace = true
Turkium-consensus-core.workspace = true
Turkium-consensus-client.workspace = true
Turkium-consensus-notify.workspace = true
Turkium-consensus-wasm.workspace = true
Turkium-core.workspace = true
Turkium-hashes.workspace = true
Turkium-index-core.workspace = true
Turkium-math.workspace = true
Turkium-mining-errors.workspace = true
Turkium-notify.workspace = true
Turkium-txscript.workspace = true
Turkium-utils.workspace = true
Turkium-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
rand.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_nested_with.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
