[package]
name = "turkium-rpc-core"
description = "turkium RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "turkium-consensus-client/wasm32-sdk",
    "turkium-consensus-wasm/wasm32-sdk"
]

[dependencies]
turkium-addresses.workspace = true
turkium-consensus-core.workspace = true
turkium-consensus-client.workspace = true
turkium-consensus-notify.workspace = true
turkium-consensus-wasm.workspace = true
turkium-core.workspace = true
turkium-hashes.workspace = true
turkium-index-core.workspace = true
turkium-math.workspace = true
turkium-mining-errors.workspace = true
turkium-notify.workspace = true
turkium-txscript.workspace = true
turkium-utils.workspace = true
turkium-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
rand.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
serde_nested_with.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
